--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -49,7 +49,7 @@ img {
   display: flex;
   justify-content: space-between;
   background-size: 40px 40px;
-  height: 100vh;
+  height: 90vh;
   background-image:
           linear-gradient(to right, var(--white) 1px, transparent 1px),
           linear-gradient(to bottom, var(--white) 1px, transparent 1px);
@@ -63,6 +63,7 @@ img {
   height: 50%;
   border: 2px solid black;
   box-shadow: 20px -20px var(--white), 20px -20px 0 2px var(--black), 40px -40px var(--white), 40px -40px 0 2px var(--black);
+}
 
 .question__rod {
   background-color: var(--light-green);
