--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -70,7 +70,7 @@ h1 {
   display: flex;
   justify-content: space-between;
   background-size: 40px 40px;
-  height: 90vh;
+  height: 100vh;
   background-image: linear-gradient(to right, var(--white) 1px, transparent 1px),
     linear-gradient(to bottom, var(--white) 1px, transparent 1px);
 }
@@ -137,6 +137,7 @@ h1 {
   justify-content: space-evenly;
   gap: 10px;
   overflow: hidden;
+
 }
 
 .question__rod-text > span {
@@ -247,6 +248,8 @@ h1 {
 .question__phrase-answer {
   display: flex;
   gap: 50px;
+  justify-content: center;
+
 }
 
 .information__content {
@@ -337,7 +340,7 @@ h1 {
 
 button {
   border: 2px solid var(--black);
-  width: 100px;
+  max-width: 40%;
   height: 50px;
   background-color: white;
   font-weight: bold;
