--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -346,3 +346,15 @@ button {
   font-weight: bold;
 
 }
+
+.image-clignote  {
+  animation-duration: .8s;
+  animation-name: clignoter;
+  animation-iteration-count: infinite;
+  transition: none;
+}
+@keyframes clignoter {
+ 0%   { opacity:1; }
+ 40%   {opacity:0; }
+ 100% { opacity:1; }
+}
